force-app/main/default/objects/Routing_Rule_Condition__c/Routing_Rule_Condition__c.object-meta.xml
<CustomObject>
  <label>Routing Rule Condition</label>
  <pluralLabel>Routing Rule Conditions</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Routing Rule Condition</label>
    <displayFormat>RC-{0000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>