force-app/main/default/objects/Routing_Rule_Condition__c/fields/Field__c.field-meta.xml
<CustomField>
  <fullName>Field__c</fullName>
  <label>Field</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetName>Routing_Fields</valueSetName>
  </valueSet>
</CustomField>