force-app/main/default/objects/Routing_Rule_Condition__c/fields/Operator__c.field-meta.xml
<CustomField>
  <fullName>Operator__c</fullName>
  <label>Operator</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetName>Routing_Operators</valueSetName>
  </valueSet>
</CustomField>