force-app/main/default/objects/Routing_Rule_Condition__c/fields/Rule__c.field-meta.xml
<CustomField>
  <fullName>Rule__c</fullName>
  <label>Routing Rule</label>
  <type>MasterDetail</type>
  <referenceTo>Routing_Rule__c</referenceTo>
  <relationshipLabel>Rule Conditions</relationshipLabel>
  <relationshipName>RuleConditions</relationshipName>
</CustomField>