force-app/main/default/objects/Routing_Rule_Condition__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
  <fullName>Sort_Order__c</fullName>
  <label>Sort Order</label>
  <type>Number</type>
  <precision>3</precision>
  <scale>0</scale>
  <defaultValue>1</defaultValue>
</CustomField>