force-app/main/default/objects/Routing_Rule_Condition__c/fields/Value__c.field-meta.xml
<CustomField>
  <fullName>Value__c</fullName>
  <label>Value</label>
  <type>Text</type>
  <length>255</length>
</CustomField>